2011-06-02  Robert Larice
 * src/frontend/postcoms.c :
   bug fix, avoid $curplot (plot_names) being assembled from negative numbers
     The variable `plot_num' is exclusively used to build plotnames,
       via sprintf(plot_name, "dc%d", plot_num) expressions
     Thus plot_num may never be decremented.
     Otherwise expressions of sort
	dc-2.var
     can't be parsed

2011-06-02  Robert Larice
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/x11.c :
   fix a segfault, when invoking `destroy' while running in batch mode on unix

2011-06-02  Robert Larice
 * src/frontend/evaluate.c :
   fix a segfault, incorrect invocation of free()
     seen with expressions like  v(node)[0]

2011-06-02  Holger Vogt
 * tests/hisim/makefile.am: no more test1.cir in EXTRA_DIST
 * INSTALL, compile_min.sh: new instructions for mingw compilation

2011-06-01  Dietmar Warning
 * devices/bjt/bjt.c: introduce ccs as an alias for the
   zero bias substrate junction capacitance cjs

2011-06-01  Robert Larice
 * src/Makefile.am :
   update tclspice to support build in a sparate directory

2011-05-31  Robert Larice
 * tests/bin/check_cmc.sh ,
 * tests/bin/runQaTests.pl ,
 * tests/bin/run_cmc_check ,
 * tests/hisim/Makefile.am ,
 * tests/hisimhv/Makefile.am :
   CMC test suite, fix choice of results subdirectory

2011-05-31  Robert Larice
 * tests/bsim3soifd/RampVg2.out ,
 * tests/bsim3soifd/inv2.out ,
 * tests/bsim3soifd/t3.out ,
 * tests/bsim3soifd/t4.out ,
 * tests/bsim3soifd/t5.out ,
 * tests/filters/lowpass.out ,
 * tests/general/mosmem.out ,
 * tests/mesa/mesa11.out ,
 * tests/polezero/filt_bridge_t.out :
   massage some tests/* reference files

2011-05-31  Robert Larice
 * src/Makefile.am ,
 * tests/Makefile.am ,
 * tests/hisim/Makefile.am ,
 * tests/hisimhv/Makefile.am :
   updates for `make dist'

2011-05-30  Robert Larice
 * tests/bin/check_cmc.sh :
   incorporate CMC test suite into make target 'check'

2011-05-30  Robert Larice
 * configure.ac ,